# frbot_tutorial

./: README.md
frbot_bringup/: CMakeLists.txt  package.xml
frbot_bringup/launch/: frbot_hardware.launch.py
frbot_bringup/rviz/: frbot.rviz
frbot_controller/: CMakeLists.txt  package.xml
frbot_description/: CMakeLists.txt  package.xml  패키지구조설명.txt
frbot_description/launch/: frbot_fake_hardware.launch.py  frbot_rviz.launch.py
frbot_description/meshes/: robot-wheel.stl
frbot_description/mujoco_models/: frbot.xml
frbot_description/urdf/: frbot.urdf  front_left_wheel.xacro  front_right_wheel.xacro  rear_left_wheel.xacro  rear_right_wheel.xacro  robot_base.urdf.xacro  robot_core.urdf.xacro  robot_final.urdf.xacro
frbot_gazebo/config/: gz_ros_bridge.yaml
frbot_gazebo/models/shelf/: model.sdf
frbot_hardware/: CMakeLists.txt  frbot_hardware_interface.cpp  frbot_hardware_plugin.xml  package.xml
frbot_navigation/: CMakeLists.txt  package.xml  패키지구조설명.txt
frbot_navigation/config/: amcl.yaml  behavior.yaml  bt_navigator.yaml  controller.yaml  global_costmap.yaml  local_costmap.yaml  map.yaml  neuronbot_params.yaml  planner.yaml  robot_state_publisher.yaml  smoother.yaml
frbot_navigation/launch/: frbot_localization.launch.py
frbot_slam/: CMakeLists.txt  package.xml  패키지구조설명.txt
frbot_slam/config/: cartographer.lua
frbot_slam/launch/: frbot_cartographer.launch.py  frbot_slam_toolbox.launch.py
